--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import 'leaflet/dist/leaflet.css';
 @import 'leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.css';
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Tint&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100..900&family=Rowdies:wght@300;400;700&family=Syne:wght@400..800&family=Underdog&display=swap" rel="stylesheet">')
 
 
 /* Map container fix */
@@ -21,3 +22,7 @@
   border-radius: 3px;
 }
 
+
+.premium-font {
+  font-family: 'Space Grotesk', sans-serif;
+}
